buildpack dev dep

--- a/composer.json
+++ b/composer.json
@@ -41,5 +41,8 @@
 		"wordpress-setup-welcome-post": [
 			"echo 'It works! Please see <a href=\"https://github.com/dzuelke/wordpress-12factor\">wordpress-12factor on GitHub</a> for info and post-install instructions.' | wp post update 1 - --post_title=\"Welcome to WordPress on Heroku\""
 		]
+	},
+	"require-dev": {
+		"heroku/heroku-buildpack-php": "*"
 	}
 }
