move wp-content to root

--- a/apache2-wordpress.conf
+++ b/apache2-wordpress.conf
@@ -12,3 +12,9 @@ DirectoryIndex index.php index.html index.htm
 	</IfModule>
 	# END WordPress
 </Directory>
+
+<Directory "${HEROKU_APP_DIR}/wp-content">
+	Require all granted
+</Directory>
+
+Alias /wp-content ${HEROKU_APP_DIR}/wp-content
