--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,7 @@
 		},
 		{
 			"type": "path",
-			"url": "themes/twentyfifteen-child/",
-			"options": {
-				"symlink": false
-			}
+			"url": "themes/twentyfifteen-child/"
 		}
 	],
 	"extra": {
