--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
 	"logo": "https://s.w.org/about/images/logos/wordpress-logo-notext-rgb.png",
 	"success_url": "/",
 	"scripts": {
-		"postdeploy": "composer wordpress-setup-core-install -- --title='WordPress on Heroku' --admin_user=\"$WORDPRESS_ADMIN_USER\" --admin_password=\"$WORDPRESS_ADMIN_PASSWORD\" --admin_email=\"$WORDPRESS_ADMIN_EMAIL\" --url='http://example.herokuapp.com/' && composer wordpress-setup-finalize && composer wordpress-setup-welcome-post"
+		"postdeploy": "composer wordpress-setup-core-install -- --title='WordPress on Heroku' --admin_user=\"$WORDPRESS_ADMIN_USER\" --admin_password=\"$WORDPRESS_ADMIN_PASSWORD\" --admin_email=\"$WORDPRESS_ADMIN_EMAIL\" --url='http://example.herokuapp.com/' && composer wordpress-setup-finalize && composer wordpress-setup-demo-theme && composer wordpress-setup-welcome-post"
 	},
 	"env": {
 		"WORDPRESS_ADMIN_EMAIL":      { "description": "WordPress Administrator E-Mail" },
